--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_offline: ^3.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
